<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#f4f2ef"
    >
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible"/>

      <TextView
        android:id="@+id/textVi"
        android:layout_height="10dp"
        android:layout_width="wrap_content" />
      
    <TextView
        android:id="@+id/fieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldName"  
        android:textColor="#c2c2c2"
        android:layout_marginLeft="8dp"/>

    <EditText
        android:id="@+id/editTextFieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="" 
        android:layout_marginLeft="8dp"
        android:textSize="@dimen/test2"/>
    
      <TextView
        android:id="@+id/textV11"
        android:layout_height="10dp"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/textViewFeatureServiceCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alias"  
        android:textColor="#c2c2c2"
        android:layout_marginLeft="8dp"/>

    <EditText
        android:id="@+id/editTextAlias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="" 
        android:layout_marginLeft="8dp"
        android:textSize="@dimen/test2"/>

    <TextView
        android:id="@+id/textV9"
        android:layout_height="10dp"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/textV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataType"  
        android:textColor="#c2c2c2"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_height="2dp"
        android:layout_width="wrap_content" />
    
    <Button
            android:id="@+id/dateButton"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
            android:text="@string/date" 
            android:textColor="#80bfff"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            />
    <Button
            android:id="@+id/integerButton"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
            android:text="@string/integer" 
            android:textColor="#80bfff"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="1dp"
            />
    <Button
            android:id="@+id/stringButton"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
            android:text="@string/string" 
            android:textColor="#80bfff"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="1dp"
            />

        <Button
            android:id="@+id/createFieldsAddButton"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/add" 
            android:background="#ffa500"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/createFieldsSaveButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/save"  
            android:padding="10dp" 
            android:typeface="monospace" 
        	android:background="#a8a8a8"
        	android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
        	/>

        <Button
            android:id="@+id/createFieldsCancelButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:background="#a8a8a8"
        	android:typeface="monospace" 
            android:text="@string/cancel" 
            android:layout_marginLeft="162dp"
            android:layout_marginTop="-50.5dp" 
        	/>
        
</LinearLayout>
