<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcomeMessage"
        android:textColor="#000000"
        android:textSize="@dimen/test5"
        android:typeface="monospace"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true" 
        />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#ffa500"
            android:padding="10dp"
            android:text="@string/getstarted"
            android:textColor="#FFFFFF"
            android:typeface="monospace"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/signin"
            android:textColor="#636363"
            android:textSize="@dimen/test3"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:padding="10dp"
            android:text="@string/createFeatureServiceName"
            android:textColor="#636363"
            android:textSize="@dimen/test3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="@string/publish"
            android:textColor="#636363"
            android:textSize="@dimen/test3" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout3"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/followMessage"
            android:textColor="#636363"
            android:textSize="@dimen/test3" />
    </RelativeLayout>

</RelativeLayout>