<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f4f2ef"
     >
    
    <TextView
        android:id="@+id/textView4"
        android:text="@string/featureServiceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/textEditFeatureServiceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:hint="@string/featureServiceNameHint" >
        <requestFocus />
     </EditText>
 	
 	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"

        <Button
            android:id="@+id/nextButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#ffa500"
            android:textColor="#FFFFFF"
        	android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/next"
            android:typeface="monospace" 
             />
        </RelativeLayout>
</RelativeLayout>

